# TME290task3

./: CMakeLists.txt  buildLogicAndStart  commands  docker-compose.yml  logicBuild  opendlv-logic-test-kiwi.cpp  push  runner
Task3 docker compose file for rpi/: docker-compose.yml
local-opendlv-device-camera-rpicamv2-master/: CMakeLists.txt  Dockerfile.armhf
local-opendlv-device-camera-rpicamv2-master/example/: docker-compose.yml  trackBuild
local-opendlv-device-camera-rpicamv2-master/example/src/: example.cpp
opendlv-device-camera-rpicamv2-master/example/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  buildArmhf
opendlv-device-camera-rpicamv2-master/example/src/: example.cpp  opendlv-standard-message-set-v0.9.1.odvd
opendlv-device-camera-rpicamv2-master/src/: opendlv-device-camera-rpicamv2.cpp
opendlv-logic-test-kiwi/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  buildFile  docker-compose.yml  pushFile
opendlv-logic-test-kiwi/src/: behavior.cpp  behavior.hpp  opendlv-logic-test-kiwi.cpp
opendlv-logic-test-kiwi/test/: test-behavior.cpp
